@@ -1,5 +1,10 @@
 2007-10-22  Dan Williams  <dcbw@redhat.com>
 
+	* src/wireless-security/ws-wpa-eap.c
+		- Use generic 802.1x methods from wireless-security.c
+
+2007-10-22  Dan Williams  <dcbw@redhat.com>
+
 	* src/wireless-security/wireless-security.c
 	  src/wireless-security/wireless-security.h
 		- (ws_802_1x_auth_combo_init, ws_802_1x_auth_combo_changed,
